fixed star rating height shift

--- a/main.css
+++ b/main.css
@@ -118,13 +118,7 @@ h5{
 }
 
 .comments.pull-left{
-    margin-top: 10px;
-    height: 40px;
-}
-
-/* ratings button */
-text-right.ratings{
-    float: right;
+    position: absolute;
 }
 
 /* login margin fix */
@@ -188,6 +182,10 @@ h1{
 
 .conditions{
     font-size: 16px;
+}
+
+.comments{
+    margin-top: 20px;
 }
 
 /* footer */
@@ -350,10 +348,6 @@ div.modal-footer {
     background-color: #085DAD;
 }
 
-/* Rating */
-.rating {
-    float:left;
-}
 
 /* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
    follow these rules. Every browser that supports :checked also supports :not(), so
